--- a/my-app/src/components/Message/Header/Header.module.scss
+++ b/my-app/src/components/Message/Header/Header.module.scss
@@ -2,41 +2,69 @@
 
 .header {
   width: 100%;
-  height: 36px;
+  min-height: 36px;
   display: flex;
   flex-direction: row;
-  gap: 10px;
-
-  .avatar {
-    width: 36px;
-    height: 36px;
-  }
+  flex-wrap: wrap;
+  row-gap: 10px;
+  justify-content: space-between;
 
   .info {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    gap: 10px;
 
-    .author, .channel {
-      margin: 0;
-      width: 100%;
-      height: 50%;
+    .avatar {
+      width: 36px;
+      height: 36px;
+    }
+
+    .source {
       display: flex;
-      align-items: center;
-      color: $gray;
-      font-weight: 400;
-      text-transform: capitalize;
+      flex-direction: column;
+
+      .author, .channel {
+        margin: 0;
+        width: 100%;
+        height: 50%;
+        display: flex;
+        align-items: center;
+        color: $gray;
+        font-weight: 400;
+        text-transform: capitalize;
+      }
+
+      .author {
+        font-style: normal;
+        font-size: 16px;
+        line-height: 13px;
+      }
+
+      .channel {
+        font-style: italic;
+        font-size: 12px;
+        line-height: 9px;
+      }
+    }
+  }
+
+  .controls {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 30px;
+
+    .buttons, .icons {
+      display: flex;
+      flex-direction: row;
     }
 
-    .author{
-      font-style: normal;
-      font-size: 16px;
-      line-height: 13px;
+    .buttons {
+      gap: 10px;
     }
 
-    .channel {
-      font-style: italic;
-      font-size: 12px;
-      line-height: 9px;
+    .icons {
+      gap: 7px;
     }
   }
 }
