--- a/my-app/src/components/Message/Header/Header.module.scss
+++ b/my-app/src/components/Message/Header/Header.module.scss
@@ -51,8 +51,10 @@
   .controls {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
-    gap: 30px;
+    row-gap: 10px;
+    column-gap: 30px;
 
     .buttons, .icons {
       display: flex;
