--- a/my-app/src/App.module.scss
+++ b/my-app/src/App.module.scss
@@ -10,5 +10,6 @@
   width: 100vw;
   min-height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center
 }
