--- a/my-app/src/templates/Button/Button.module.scss
+++ b/my-app/src/templates/Button/Button.module.scss
@@ -2,7 +2,8 @@
 
 .button {
   padding: 10px;
-  width: 64px;
+  min-width: 64px;
+  width: fit-content;
   height: 28px;
   display: flex;
   justify-content: center;
